# CourtFlow

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  pyproject.toml  requirements.txt
dashboard/: app.py  landing.html  view.html
data/: courtflow.db
docs/: CALIBRATION_PLAN.md  CONTRACTS_AND_STRUCTURES.md  COURT_CALIBRATION.md  DETECTION_TRAINING.md  FUNCTIONAL_INTERFACES_AND_ANALYSIS.md  INTELLIGENCE.md  PRE_PILOT_PRETRAINED.md  README.md  RUN_MATCH_TIME_AND_RESULTS.md  TESTING.md  TESTING_CALIBRATION.md  TODO_CODE.md  TODO_WEBSITE.md
models/: README.md
sample_videos/: README.md
src/: config.py  ffmpeg_utils.py  io_utils.py  pipeline.py  run_match.py  schemas.py  video_utils.py
src/analytics/: __init__.py  heatmap.py  movement.py  padel.py  report.py
src/app/: __init__.py  api.py  cli.py
src/b1_capture/: README.md  recorder_ffmpeg.py
src/b2_storage/: README.md  db.py  match_store.py
src/b3_controller/: README.md  controller.py
src/b4_court_model/: README.md  calibration.py
src/b5_player_tracking/: README.md  tracking.py
src/b5b_coord_conversion/: README.md  coords.py
src/b6_movement_metrics/: README.md  analytics.py
src/b7_highlights/: README.md  highlights.py
src/b8_cloud_upload/: README.md  uploader.py
src/b9_cloud_storage/: README.md  storage.py
src/cloud/: __init__.py  storage_r2.py  upload.py
src/common/: config.py  ffmpeg_utils.py  io_utils.py  video_utils.py
src/config/: __init__.py  constants.py  settings.py
src/court/: __init__.py  config.py  registry.py
src/domain/: enums.py  models.py  report_contract.py
(+48 files in other folders)
